<resources>
    <string name="app_name">多功能小盒子</string>
    <string name="多功能盒子">多功能小盒子</string>
    <string name="首页">首页</string>
    <string name="工具">工具</string>
    <string name="收藏">收藏</string>
    <string name="设置">设置</string>
    <string name="搜索">搜索</string>
    <string name="输入搜索内容">输入搜索内容</string>
    <string name="todo">TODO</string>
    <string name="新建收藏">新建收藏</string>
    <string name="查看收藏">查看收藏</string>
    <string name="除号">÷</string>
    <string name="乘号">×</string>
    <string name="等于">=</string>
    <string name="点">.</string>
    <string name="_0">0</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="加号">+</string>
    <string name="减号">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="_9">9</string>
    <string name="翻译">翻译</string>
    <string name="换行">如果要翻译多个句子，可以换行输入</string>
    <string name="输入框">请输入需要翻译的单词，中文翻译英文</string>
    <string name="_2017_01_18">2017年01月18日</string>
    <string name="save">save</string>
    <string name="title">title</string>
    <string name="content">content</string>
    <string name="addButtonText">Add Record</string>
    <string name="edit">编辑</string>
    <string name="确定">确 定</string>
    <string name="删除">删除</string>
    <string name="查看">查看</string>
    <string name="修改">修改</string>
    <string name="查找">查找</string>
    <string name="星期一">星期一</string>
    <string name="课节期">课节/星期</string>
    <string name="课程表">课程表</string>
    <string name="星期六">星期六</string>
    <string name="星期五">星期五</string>
    <string name="星期三">星期三</string>
    <string name="星期四">星期四</string>
    <string name="第四大节">第四大节</string>
    <string name="星期二">星期二</string>
    <string name="保存">保存</string>
    <string name="星期天">星期天</string>
    <string name="第三大节">第三大节</string>
    <string name="第二大节">第二大节</string>
    <string name="第一大节">第一大节</string>
    <string name="课程名称">课程名称</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_content">编辑</string>
    <string name="title_activity_select">SelectAct</string>
    <string name="关于">关于</string>
    <string name="检查更新暂时不可用">检查更新暂时不可用</string>
    <string name="软件信息">软件信息</string>
    <string name="检查更新">检查更新</string>
    <string name="翻译提示">如果要翻译多个句子，可以换行输入</string>
    <string name="关于信息">这是我第一次用开发软件做一个可运行的软件。因为是第一次写安卓，所以对于安卓开发软件不太熟悉。我花了一个月了解安卓的基础控件和一些组件的使用。不得不说一个人开发真的是太难了。面对一大堆看不懂得东西要去百度才能明白，调试还得用打开usb调试连接手机debug，每次打开项目build要花好长时间。我感觉太累了，对于我现阶段的技术写到这已经是极限了。由于技术有限，刚开始提出的一些功能未能实现。我能做到这么多我感觉已经很不错了。由于我没有做软件的经验，所以这个软件的体系很乱，我基本上是想到什么写什么，所以软件精简性不行。这是我做的第一款软件，虽然有些地方的实现方法是学习了别人的方法然后自己码的，不过还是在制作中学到了许多东西。最后，庆祝一下软件终于完成了（其实还是个阉割版）QAQ</string>
</resources>
