<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wd"
    tools:context="com.example.yangbin.myapp.settingActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="395dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_style"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/home"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="ReturnHome"
            android:text="@string/首页" />

        <Button
            android:id="@+id/tool"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="Tool"
            android:text="@string/工具" />

        <Button
            android:id="@+id/collect"
            style="?android:attr/buttonBarButtonStyle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="Collect"
            android:text="@string/收藏" />

        <Button
            android:id="@+id/setting"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffffff"
            android:text="@string/设置" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="661dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:textColor="#123456"
            android:background="#ffff00"
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="154dp"
            android:onClick="Rjxx"
            android:text="@string/软件信息"
            android:textSize="24sp" />

        <Button

            android:id="@+id/button5"
            style="@android:style/Widget.Material.Light.Button.Small"
            android:layout_width="match_parent"
            android:layout_height="157dp"
            android:background="#000000"
            android:text="@string/检查更新"
            android:textColor="#ff0600"
            android:textSize="24sp"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:background="#ff00ff"
            android:onClick="Gyu"
            android:text="@string/关于"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:text="@string/检查更新暂时不可用"
            android:textAlignment="center"
            android:textColor="#ffff00"
            android:textSize="24sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>