<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="LabelFor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cc"
    tools:context="com.example.yangbin.myapp.Main2Activity">

    <LinearLayout
        android:background="@drawable/button_style"
        android:id="@+id/linearLayout"
        android:layout_width="395dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            style="?android:attr/buttonBarStyle"
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:layout_weight="1"
            android:text="@string/首页" />

        <Button
            android:id="@+id/tool"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="Tool"
            android:text="@string/工具" />

        <Button
            android:id="@+id/collect"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="Collect"
            android:text="@string/收藏" />

        <Button
            android:id="@+id/setting"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="Setting"
            android:text="@string/设置" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="388dp"
        android:layout_height="211dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="欢迎使用多功能小盒子"
        android:textAlignment="center"
        android:textColor="#FF00FF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>